--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "langchain": "0.0.33",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
+    "next-themes": "^0.2.1",
     "pdf-parse": "1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
