--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
